--- a/src/doc/conf/badwords.conf
+++ b/src/doc/conf/badwords.conf
@@ -21,15 +21,8 @@ badword channel { word "drunk";      replace "buck";                }
 badword channel { word "dude";       replace "blud";                }
 badword channel { word "efnet";      replace "efrael";              }
 badword channel { word "elaborate";  replace "ebloggerate";         }
-badword channel { word "endocrine";  replace "retard";              }
-badword channel { word "estradiol";  replace "creatine";            }
-badword channel { word "estrogen";   replace "testosterone";        }
-badword channel { word "estrogel";   replace "baby oil";            }
 badword channel { word "fag";        replace "sodomite";            }
 badword channel { word "faggot";     replace "sodomite";            }
-badword channel { word "femboy";     replace "GUY IRL WHO WILL NEVER BE A GIRL"; }
-badword channel { word "fem boy";    replace "GUY IRL WHO WILL NEVER BE A GIRL"; }
-badword channel { word "(filehole)"; replace "I AM A RETARD WHO DOESNT KNOW ABOUT HARDFILES.ORG YET"; }
 badword channel { word "friend";     replace "mate";                }
 badword channel { word "fuckin";     replace "blood clot";          }
 badword channel { word "fucking";    replace "blood clot";          }
@@ -45,7 +38,6 @@ badword channel { word "hate";       replace "04 hate ";        }
 badword channel { word "hello";      replace "smello";              }
 badword channel { word "hey";        replace "oi";                  }
 badword channel { word "high";       replace "HIE";                 }
-badword channel { word "(hole.birdnest.live)"; replace "IM.A.RETARD.WHO.DOESNT.KNOW.ABOUT.HARDFILES.ORG.YET"; }
 badword channel { word "holy shit";  replace "bloody hell";         }
 badword channel { word "home";       replace "flat";                }
 badword channel { word "homie";      replace "mate";                }
@@ -57,38 +49,32 @@ badword channel { word "i'm";        replace "m";                   }
 badword channel { word "i am";       replace "m";                   }
 badword channel { word "im";         replace "m";                   }
 badword channel { word "ima";        replace "m";                   }
-badword channel { word "in da";      replace "int";                 }
-badword channel { word "in the";     replace "int";                 }
-badword channel { word "in this";    replace "int";                 }
+badword channel { word " in the ";   replace " int ";               }
+badword channel { word " in this ";  replace " int ";               }
 badword channel { word "japex";      replace "RAPEX";               }
 badword channel { word "jew";        replace "shusky";              }
 badword channel { word "jewish";     replace "shuskish";            }
 badword channel { word "jfc";        replace "bloody hell";         }
 badword channel { word "jpx";        replace "RAPEX";               }
-badword channel { word "kade";       replace "larry";               }
 badword channel { word "kek";        replace "%%";                  }
 badword channel { word "kike";       replace "shusky";              }
-badword channel { word "labatu";     replace "larry";               }
 badword channel { word "ladies";     replace "bints";               }
 badword channel { word "lady";       replace "bint";                }
-badword channel { word "lionie";     replace "larry";               }
 badword channel { word "lmao";       replace "%%";                  }
 badword channel { word "lmfao";      replace "%%";                  }
 badword channel { word "(lol)";      replace "%%";                  }
 badword channel { word "lorf";       replace "%%";                  }
-badword channel { word "lucia";      replace "larry";               }
-badword channel { word "lucio";      replace "larry";               }
+badword channel { word "mao";        replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "mau";        replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "maw";        replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "mew";        replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "mraw";       replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "mrp";        replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "mrrp";       replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
+badword channel { word "mrw";        replace "04 I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
 badword channel { word "man";        replace "lad";                 }
 badword channel { word "marijuana";  replace "bobby brown";         }
-badword channel { word "mau";        replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
-badword channel { word "maw";        replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
-badword channel { word "(meow)";     replace "bark bark";           }
-badword channel { word "mew";        replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
 badword channel { word "money";      replace "clams";               }
-badword channel { word "mraw";       replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
-badword channel { word "mrp";        replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
-badword channel { word "mrrp";       replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
-badword channel { word "mrw";        replace "I AM A GUY IRL AND WILL NEVER BE A GIRL"; }
 badword channel { word "my";         replace "me";                  }
 badword channel { word "nice";       replace "safe";                }
 badword channel { word "(nigger)";   replace "angel";               }
@@ -101,7 +87,6 @@ badword channel { word "pal";        replace "mate";                }
 badword channel { word "pot";        replace "bobby brown";         }
 badword channel { word "prostitute"; replace "slag";                }
 badword channel { word "reefer";     replace "bobby brown";         }
-badword channel { word "roarie";     replace "larry";               }
 badword channel { word "rofl";       replace "%%";                  }
 badword channel { word "rr";         replace "%%";                  }
 badword channel { word "same";       replace "salami";              }
@@ -109,7 +94,6 @@ badword channel { word "sandnet";    replace "supernets";           }
 badword channel { word "shit-faced"; replace "buck";                }
 badword channel { word "shitfaced";  replace "buck";                }
 badword channel { word "shit faced"; replace "buck";                }
-badword channel { word "(shithole.neocities.org)";  replace "aarp.org"; }
 badword channel { word "shoes";      replace "kicks";               }
 badword channel { word "sir";        replace "lad";                 }
 badword channel { word "skank";      replace "slag";                }
@@ -117,15 +101,13 @@ badword channel { word "(skyp)";     replace "skik";                }
 badword channel { word "slut";       replace "slag";                }
 badword channel { word "socks.cat";  replace "iproyal.com";         }
 badword channel { word "sockscat";   replace "iproyal.com";         }
+badword channel { word "spoke";      replace "04 SPOKE ";       }
 badword channel { word "(ss)";       replace "ϟϟ";                  }
-badword channel { word "spoke";      replace "04 SPOKE ";        }
 badword channel { word "sup";        replace "wah gwaan";           }
 #badword channel { word "the";       replace "prometheo";           }
 badword channel { word "twat";       replace "slag";                }
 badword channel { word "(troll)";    replace "papillion";           }
 badword channel { word "uber";       replace "HELLS ANGELS";        }
-badword channel { word "uwu";        replace "( ͡° ͜ʖ ͡°)";           }
-badword channel { word "vxp";        replace "larry";               }
 badword channel { word "watsup";     replace "wah gwaan";           }
 badword channel { word "wats up";    replace "wah gwaan";           }
 badword channel { word "weed";       replace "bobby brown";         }
@@ -139,6 +121,32 @@ badword channel { word "women";      replace "bints";               }
 badword channel { word "wuddup";     replace "wah gwaan";           }
 badword channel { word "wussup";     replace "wah gwaan";           }
 badword channel { word "(year)";     replace "yonk";                }
+
+# ANTI VXP
+badword channel { word "roarie";     replace "larry";               }
+badword channel { word "lucia";      replace "larry";               }
+badword channel { word "lucio";      replace "larry";               }
+badword channel { word "kade";       replace "larry";               }
+badword channel { word "labatu";     replace "larry";               }
+badword channel { word "vxp";        replace "larry";               }
+
+
+
+# ANTI FAGGOTRY
+badword channel { word "boywife";    replace "retarded idiot";                    }
+badword channel { word "boy wife";   replace "retarded idiot";                    }
+badword channel { word "endocrine";  replace "retard";                            }
+badword channel { word "estradiol";  replace "creatine";                          }
+badword channel { word "estrogen";   replace "testosterone";                      }
+badword channel { word "estrogel";   replace "anti itch cream";                   }
+badword channel { word "(meow)";     replace "bark bark";                         }
+badword channel { word "femboy";     replace "GUY IRL WHO WILL NEVER BE A GIRL";  }
+badword channel { word "fem boy";    replace "GUY IRL WHO WILL NEVER BE A GIRL";  }
+badword channel { word "cat boy";    replace "GUY IRL WHO WILL NEVER BE A GIRL";  }
+badword channel { word "catboy";     replace "GUY IRL WHO WILL NEVER BE A GIRL";  }
+badword channel { word "uwu";        replace "( ͡° ͜ʖ ͡°)";                         }
+
+
 
 # No-homo Mode
 #badword channel { word "came";     replace "came (nohomo)";    }
