--- a/src/doc/conf/opers.conf
+++ b/src/doc/conf/opers.conf
@@ -77,44 +77,15 @@ oper acidvegas {
 #	vhost super.nets.link;
 #}
 
-oper 5000 {
-	class local;
-	mask { ip 127.0.0.1; }
-	maxlogins 1;
-	modes BdD;
-	operclass fuckyou;
-	password "REDACTED";
-	require-modes z;
-	vhost 5000;
-}
+oper 5000    { auto-login yes; class local; mask { ip 127.0.0.1; } maxlogins    1; modes BdD; operclass fuckyou; password "REDACTED"; require-modes z; vhost      5000; }
+oper cancer  { auto-login yes; class local; mask { ip 127.0.0.1; } maxlogins    1; modes BdD; operclass cancer;  password "REDACTED"; require-modes z; vhost     RETTE; }
+oper phalanx { auto-login yes; class local; mask localhost;        maxlogins 5000; modes BdD; operclass phalanx; password 'REDACTED';                  vhost scrambler; }
 
-oper cancer {
-	class local;
-	mask { ip 127.0.0.1; }
-	maxlogins 1;
-	modes BdD;
-	operclass cancer;
-	password "REDACTED";
-	require-modes z;
-	vhost RETTE;
-}
-
-oper phalanx {
-	auto-login yes;
-	class local;
-	mask localhost;
-	maxlogins 5000;
-	modes BdD;
-	operclass phalanx;
-	password 'REDACTED';
-	vhost R;
-}
 
 ##################################################
 
-operclass netadmin {
-	permissions { chat; client; immune; kill; channel; route; sacmd; self; server; server-ban; services; }
-}
+
+operclass netadmin { permissions { chat; client; immune; kill; channel; route; sacmd; self; server; server-ban; services; } }
 
 operclass mate {
 	permissions {
