--- a/src/doc/conf/unrealircd.hub.conf
+++ b/src/doc/conf/unrealircd.hub.conf
@@ -17,15 +17,9 @@ link services.supernets.org {
 	class servers;
 }
 
-log {
-	source { error; fatal; warn; }
-	destination { file "ircd.log" { maxsize 5M; } }
-}
-
-log {
-	source { !debug; all; }
-	destination { channel "#syslog"; }
-}
+log { source { error; fatal; warn; } destination { file "ircd.log"   { maxsize 5M;                          } } }
+log { source { all; !debug;        } destination { channel "#syslog" { json-message-tag yes; oper-only yes; } } }
+log { source { all; !debug;        } destination { syslog;                                                    } }
 
 ulines { services.supernets.org; }
 
