--- a/src/doc/conf/unrealircd.link.conf
+++ b/src/doc/conf/unrealircd.link.conf
@@ -1,8 +1,9 @@
+include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/modules.conf";
+include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/ircd.conf";
 include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/badwords.conf";
 include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/except.conf";
-include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/ircd.conf";
-include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/modules.conf";
 include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/opers.conf";
 include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/snomasks.conf";
 include "https://USERNAME:PASSWORD@hub.supernets.org:PORT/spamfilter.conf";
 me { name "example.supernets.org"; info "SuperNETS IRC Network"; sid XXX; }
+#require authentication { mask { *@*; } reason "8,4   E N T E R   T H E   V O I D   "; }
