--- a/src/doc/conf/unrealircd.remote.conf
+++ b/src/doc/conf/unrealircd.remote.conf
@@ -1,50 +1,52 @@
 @define $VOID "8,4   E N T E R   T H E   V O I D   ";
 
-admin {
-	"         4Administrator: Wyatt Deere        14(aka chrono)        6chrono@digitalgangsta.com";
-	"           4Retaliation: Brandon McDubai    14(aka MRCHATS)       6branbran89@supernets.org";
-	"             4Moderator: Bristopher Manning 14(aka delorean)      6simpsonsfan420@supernets.org";
-	"                 4Sales: Branthony Bronson  14(aka pyrex)         6showercaphandgun@supernets.org";
-	"      4Public Relations: Bradshaw Wiggins   14(aka Baron Fortuna) 6lovemyrace@dailystormer.in";
-	"4Research & Development: Tim Allen-key      14(aka e)             6highschoolmusical@carltonbanksclub.edu";
-	"";
-	"Feel free to chat with us in #5000 for network help & support!";
-}
-
-alias botserv { type services; }
-alias bs { target botserv; type services; }
-alias chanserv { type services; }
-alias cs { target chanserv; type services; }
-alias hostserv { type services; }
-alias hs { target hostserv; type services; }
-alias nickserv { type services; }
-alias ns { target nickserv; type services; }
-alias operserv { type services; }
-alias os { target operserv; type services; }
+admin { "$VOID"; }
 
 class clients { pingfreq 120; maxclients  100; sendq  25M; recvq 32k; }
 class known   { pingfreq 120; maxclients  250; sendq  50M; recvq 32k; }
 class local   { pingfreq 300; maxclients 1000; sendq  50M; options { nofakelag; } }
-class servers { pingfreq 300; maxclients   20; sendq 100M; connfreq 15; }
+class webchat { pingfreq 120; maxclients  150; sendq   5M; recvq 32k; }
+class servers { pingfreq 120; maxclients   10; sendq 100M; connfreq 15; }
 
-allow { mask *;                              class clients; maxperip 2;    global-maxperip 2; }
-allow { mask { security-group known-users; } class known;   maxperip 3;    global-maxperip 3; }
-allow { mask { 127.0.0.1;                  } class local;   maxperip 1000; global-maxperip 1000; password "simpsonsfan"; }
+allow { mask *;                              class clients; maxperip 2;  }
+allow { mask { security-group     webchat; } class webchat; maxperip 3; }
+allow { mask { security-group known-users; } class   known; maxperip 3;  }
+allow { mask { 127.0.0.1;                  } class   local; maxperip 1000; password "simpsonsfan"; options { reject-on-auth-failure; } }
 
-listen { ip *; port 6667;      options { clientsonly;      } }
-listen { ip *; port 6697;      options { clientsonly; tls; } tls-options { certificate "tls/irc.crt"; key "tls/irc.key"; } }
-listen { ip *; port REDACTED;  options { serversonly; tls; } }
 
-#require authentication { mask { *@127.0.0.2; } reason "$VOID"; }
+listen { ip *; port 6667;     options { clientsonly;      } }
+listen { ip *; port 6697;     options { clientsonly; tls; } tls-options { certificate "tls/irc.crt"; key "tls/irc.key"; } }
+listen { ip *; port 7000;     options { tls; websocket { type text; } } tls-options {  certificate "tls/irc.crt"; key "tls/irc.key"; options { no-client-certificate; } } }
+listen { ip *; port REDACTED; options { serversonly; tls; } }
 
-webirc {
-	mask 205.185.121.23;
-	password "supernets_underground_collective_2022"
+log { source { error; fatal; warn; } destination { file "ircd.log"   { maxsize 5M;                          } } }
+log { source { all; !debug;        } destination { channel "#syslog" { json-message-tag yes; oper-only yes; } } }
+log { source { all; !debug;        } destination { syslog;                                                    } }
+
+tld { mask *@*; motd remote.motd; rules remote.motd; options { remote; } }
+
+ban nick { mask MemoServ; reason "$VOID"; }
+
+except ban { mask { ip             { 127.0.0.1; } } type { all; } }
+except ban { mask { security-group { irccloud;  } } type { all; } }
+except ban { mask { security-group { leaf;      } } type { all; } }
+
+except ban {
+	mask {
+		ip { 192.99.194.177; 2607:5300:203:315e::5; } # crawler.ircdriven.com       (https://www.ircdriven.com/about/bots/)
+		ip { 149.56.47.33;                          } # stats-grabber.ircdocs.horse (https://stats.ircdocs.horse/)
+	}
+	type { all; }
 }
 
-deny channel { channel "#help";     reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
-deny channel { channel "#pumpcoin"; reason "This channel has moved to #exchange";  redirect "#exchange";  }
-deny channel { channel "#tor";      reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
+deny channel { channel "#help";      reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
+deny channel { channel "#pumpcoin";  reason "This channel has moved to #exchange";  redirect "#exchange";  }
+deny channel { channel "#supernets"; reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
+
+#vhost { auto-login yes; mask { identified yes; } vhost $account.supernets.irc; }
+vhost { auto-login yes; mask { security-group irccloud; } vhost paying.money.to.chat.on.irc.with.irccloud.com; }
+
+ulines { services.supernets.org; }
 
 link irc.supernets.org {
 	incoming { mask REDACTED; }
@@ -58,56 +60,46 @@ link irc.supernets.org {
 	class servers;
 }
 
-log {
-	source { error; fatal; warn; }
-	destination { file "ircd.log" { maxsize 5M; } }
+alias botserv  { type services;                  }
+alias bs       { target botserv;  type services; }
+alias chanserv { type services;                  }
+alias cs       { target chanserv; type services; }
+alias hostserv { type services;                  }
+alias hs       { target hostserv; type services; }
+alias nickserv { type services;                  }
+alias ns       { target nickserv; type services; }
+alias operserv { type services;                  }
+alias os       { target operserv; type services; }
+
+blacklist dronebl  { dns { name dnsbl.dronebl.org; type record; reply { 3; 5; 6; 7; 8; 9; 10; 11; 12; 13; 14; 15; 16; } } action gzline; ban-time 30d; reason "$VOID"; }
+blacklist efnetrbl { dns { name rbl.efnetrbl.org;  type record; reply { 1; 4; 5;                                      } } action gzline; ban-time 30d; reason "$VOID"; }
+blacklist torbl    { dns { name torexit.dan.me.uk; type record; reply { 100;                                          } } action gzline; ban-time 30d; reason "$VOID"; }
+
+security-group known-users { identified yes; reputation-score 10000; }
+security-group webchat     { public yes; webirc yes; websocket yes;  }
+
+security-group leaf {
+	ip { 18.117.172.253/32;                          } # omega
+	ip { 107.174.147.41/32;                          } # shrimp
+	ip { 45.33.2.9/32;                               } # wildwest
+	ip { 143.244.181.76/32;                          } # openwater
+	ip { 51.210.148.42/32;                           } # contra
+	ip { 209.141.34.40/32;                           } # micro
+	ip { 2600:3c00::2000:46ff:fe0c:9f26/128;         } # wildwest
+	ip { 2001:41d0:304:200::8a4/128;                 } # contra
+	ip { 2600:1f16:45e:9100:216b:d03c:6a95:9467/128; } # omega
+	ip { 2604:a880:4:1d0::bc11:d000/128;             } # openwater
+	ip { 2605:6400:20:b1c:39bf:c78d:6faf:23bb/128;   } # micro
 }
 
-log {
-	source { !debug; all; }
-	destination { channel "#syslog"; }
-}
-
-tld {
-	mask *@*;
-	motd remote.motd;
-	rules remote.motd;
-	options { remote; }
-}
-
-ulines { services.supernets.org; }
-
-blacklist dronebl {
-	dns {
-		name dnsbl.dronebl.org;
-		type record;
-		reply { 3; 5; 6; 7; 8; 9; 10; 11; 12; 13; 14; 15; 16; }
-	}
-	action gzline;
-	ban-time 30d;
-	reason "$VOID";
-}
-
-blacklist efnetrbl {
-	dns {
-		name rbl.efnetrbl.org;
-		type record;
-		reply { 1; 4; 5; }
-	}
-	action gzline;
-	ban-time 30d;
-	reason "$VOID";
-}
-
-blacklist torbl {
-	dns {
-		name torexit.dan.me.uk;
-		type record;
-		reply { 100; }
-	}
-	action gzline;
-	ban-time 30d;
-	reason "$VOID";
+# source: https://www.irccloud.com/static/hosts.json
+security-group irccloud {
+	public yes;
+	ip { 5.254.36.56/29;     }
+	ip { 5.254.36.104/29;    }
+	ip { 2a03:5180:f::/62;   }
+	ip { 2a03:5180:f:4::/63; }
+	ip { 2a03:5180:f:6::/64; }
 }
 
 set {
@@ -121,7 +113,6 @@ set {
 	restrict-usermodes "ips";
 	restrict-channelmodes "nLpPs";
 	restrict-commands {
-		channel-create  { except { connect-time 60;  identified yes; reputation-score 100; } }
 		channel-message { except { connect-time 5;   identified yes; reputation-score 100; } }
 		channel-notice  { except { connect-time 15;  identified yes; reputation-score 100; } }
 		invite          { except { connect-time 300; identified yes; reputation-score 100; } }
@@ -132,7 +123,7 @@ set {
 	}
 	oper-auto-join "#syslog";
 	who-limit 1;
-	maxbans 200;
+	maxbans 250;
 	nick-length 20;
 	maxchannelsperuser 10;
 	channel-command-prefix "`!@$.";
@@ -151,20 +142,8 @@ set {
 		"REDACTED";
 	}
 	cloak-prefix "SUPER";
-	plaintext-policy {
-		user warn;
-		oper deny;
-		server deny;
-		user-message "4WARNING: You are not on a secure TLS connection";
-		oper-message "Network operators must be on a secure TLS connection";
-	}
-	outdated-tls-policy {
-		user warn;
-		oper deny;
-		server deny;
-		user-message "4WARNING: You are using an outdated TLS protocol or cipher";
-		oper-message "Network operators must be using an up-to-date TLS protocol & cipher";
-	}
+	plaintext-policy    { user warn; oper deny; server deny; user-message "4WARNING: You are not on a secure TLS connection";           oper-message "$VOID"; }
+	outdated-tls-policy { user warn; oper deny; server deny; user-message "4WARNING: You are using an outdated TLS protocol or cipher"; oper-message "$VOID"; }
 	anti-flood {
 		channel {
 			profile defcon { flood-mode "[20j#R5,10n#N5,100m#M5]:5"; }
@@ -173,10 +152,7 @@ set {
 		}
 		everyone {
 			connect-flood 3:60;
-			handshake-data-flood {
-				amount 4k;
-				ban-action kill;
-			}
+			handshake-data-flood { amount 4k; ban-action kill; }
 		}
 		known-users {
 			away-flood    10:300;
@@ -184,45 +160,29 @@ set {
 			knock-flood   10:300;
 			join-flood	  10:300;
 			nick-flood    10:300;
+			lag-penalty       10;
+			lag-penalty-bytes  0;
 			max-concurrent-conversations { users 5; new-user-every 60s; }
-			lag-penalty 10; # update?
-			lag-penalty-bytes 0;
 		}
 		unknown-users {
-			away-flood    3:300;
-			invite-flood  3:300;
-			knock-flood   3:300;
-			join-flood    3:300;
-			nick-flood    3:300;
-			max-concurrent-conversations { users 2; new-user-every 120s; }
-			lag-penalty 25;
+			away-flood     3:300;
+			invite-flood   3:300;
+			knock-flood    3:300;
+			join-flood     3:300;
+			nick-flood     3:300;
+			lag-penalty       25;
 			lag-penalty-bytes 90;
+			max-concurrent-conversations { users 2; new-user-every 120s; }
 		}
 	}
 	default-bantime 30d;
 	modef-default-unsettime 5;
-	spamfilter {
-		ban-time 30d;
-		ban-reason "$VOID";
-		utf8 yes;
-		except { destination { "#anythinggoes"; } }
-	}
+	spamfilter { ban-time 30d; ban-reason "$VOID"; utf8 yes; except { destination { "#anythinggoes"; } } }
 	max-targets-per-command { kick 1; part 1; privmsg 1; }
 	hide-ban-reason yes;
-	reject-message {
-		gline                "$VOID";
-		kline                "$VOID";
-		password-mismatch    "$VOID";
-		server-full          "$VOID";
-		too-many-connections "$VOID";
-		unauthorized         "$VOID";
-	}
+	reject-message { gline "$VOID"; kline "$VOID"; password-mismatch "$VOID"; server-full "$VOID"; too-many-connections "$VOID"; unauthorized "$VOID"; }
 	hide-killed-by yes;
-	antimixedutf8 {
-		score 8;
-		ban-action block;
-		ban-reason "$VOID";
-	}
+	antimixedutf8 { score 8; ban-action block; ban-reason "$VOID"; }
 	connthrottle {
 		except        { reputation-score 100; identified yes; webirc yes; }
 		new-users     { local-throttle 20:60; global-throttle 30:60;      }
@@ -245,41 +205,12 @@ set {
 		oper        { everyone none; self full; oper full; } 
 		server      { everyone none; self none; oper full; }
 	}
-	blacklist {
-        recheck-time-first 2m;
-        recheck-time 15m;
-    }
-	webredir { url "https://webchat.supernets.org"; }
+	blacklist { recheck-time-first 2m; recheck-time 15m; }
+	#webredir { url "https://webchat.supernets.org"; }
 }
 
-hideserver {
-	disable-map yes;
-	disable-links yes;
-	map-deny-message "$VOID";
-	links-deny-message "$VOID";
-}
+hideserver { disable-map yes; disable-links yes; map-deny-message "$VOID"; links-deny-message "$VOID"; }
 
-security-group known-users {
-	identified yes;
-	reputation-score 10000;
-}
-
-security-group webchat {
-	webirc yes;
-}
-
-set known-users {
-	auto-join "#superbowl";
-}
-
-set unknown-users {
-	auto-join "#blackhole";
-	static-quit "EMO-QUIT";
-	static-part "EMO-PART";
-}
-
-set webchat {
-	auto-join "#superbowl";
-	static-quit "EMO-QUIT";
-	static-part "EMO-PART";
-}
+set known-users   { auto-join "#superbowl";                                                 }
+set unknown-users { auto-join "#blackhole"; static-quit "EMO-QUIT"; static-part "EMO-PART"; }
+set webchat       { auto-join "#superbowl"; static-quit "EMO-QUIT"; static-part "EMO-PART"; }
