--- a/src/doc/conf/custom.conf
+++ b/src/doc/conf/custom.conf
@@ -1,19 +1,14 @@
-# Custom (FOENEM)
-except ban {
-	mask {
-		ip { 1.4.8.8; } # Pyrex
-	}
-	type { all; }
-}
+#except ban { mask { ip { 1.4.8.8; } } type { all; } } # Pyrex
 
+#spamfilter {
+#	match-type simple;
+#	match "*spam*message*here*";
+#	target { private; private-notice; channel; channel-notice; }
+#	action kill;
+#   show-message-content-on-hit always;
+#	reason "8,4   E N T E R   T H E   V O I D   ";
+#}
 
-# Scanners
-except ban {
-	mask {
-		ip { 192.99.194.177; 2607:5300:203:315e::5; } # crawler.ircdriven.com (https://www.ircdriven.com/about/bots/)
-		ip { 85.25.10.40;  }                          # anaconda.netsplit.de
-		ip { 149.56.47.33; }                          # stats-grabber.ircdocs.horse
-		ip { 109.169.31.13; }                         # out.kiwiirc.com
-	}
-	type { all; }
-}
+#/spamfilter add -simple cpnN block   - "8,4___E_N_T_E_R___T_H_E___V_O_I_D___" "message*here"
+#/spamfilter add -simple cpnN kill    - "8,4___E_N_T_E_R___T_H_E___V_O_I_D___" "message*here"
+#/spamfilter add -simple cpnN gzline 1d "8,4___E_N_T_E_R___T_H_E___V_O_I_D___" "message*here"
